<resources>
    <string name="app_name">SampleProjects</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appname">Sample Projects</string>
    <string name="menu">Menu</string>
    <string name="menu_button">Menu Button</string>
    <string name="tab_view">Tab View Sample</string>
    <string name="frag_sam">Fragment Sample</string>
    <string name="rec_sam">Recycler View Sample</string>
    <string name="home_screen">Home Screen</string>
    <string name="tab1">Text</string>
    <string name="tab2">Resources</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="java">Java Code</string>
    <string name="xml">XML Code</string>
    <string name="transition_string">hello</string>
    <string name="click_me">Click Me!</string>
    <string name="samplemain">This is the example of Fragments. A Fragment represents a behavior or a portion of user interface in a FragmentActivity. You can combine multiple fragments in a single activity to build a multi-pane UI and reuse a fragment in multiple activities. You can think of a fragment as a modular section of an activity, which has its own lifecycle, receives its own input events, and which you can add or remove while the activity is running (sort of like a "sub activity" that you can reuse in different activities). Rotate the phone to landscape mode to view another fragment.</string>
    <string name="stackview">Stack View: Swipe down on the stack for popping the top image from the stack &amp; swipe up on the stack for pushing the previous popped image back to the stack.
</string>
    <string name="tab1_text">This is an example of Tab View implemented via Fragments, FragmentPagerAdapter and ViewPager.</string>
    <string name="main_fragment">This is a sample project of some concepts of the android. Tap the button on the left side of the toolbar to select any option from the navigation menu.</string>
    <string name="title_activity_sample_fragment">SampleFragmentActivity</string>
    <string name="buttonresources">Go to Resources</string>
    <string name="landbutton">This is the landscape layout of the fragment. Infact, this whole app is build on the concept of fragments build for each navigation menu option &amp; then, nested fragments are used to further render views on the main activity screen.</string>
    <string name="title_activity_image_view_grid">ImageViewGrid</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="Recycler_view">Go to Recycler View</string>
    <string name="add">Add a menu item to Recycler View</string>
    <string name="recinfo">Recycler View info</string>
    <string name="rec_info">RecyclerView is an advanced and flexible version of ListView and GridView. It is a container used for displaying large amount of data sets that can be scrolled very efficiently by maintaining a limited number of views. It is a dynamic UI. Go to our sample Recycler View by tapping \'Go to Recycler View\' button.Then, you can dynamically add items to our sample Recycler View by tapping on \'Add a menu item to Recycler View\' button".</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
